--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,17 @@ nav {
   justify-self: center;
   align-self: center;
 }
+
+footer {
+  height: 10vh;
+  background-color: var(--red);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
+
+.container-fluid {
+  margin-bottom: 60px; /*Same as footer height */
+}
