--- a/css/styles.css
+++ b/css/styles.css
@@ -29,17 +29,25 @@ nav {
   justify-self: center;
   align-self: center;
 }
-
-footer {
-  height: 10vh;
+button {
+  padding: 5px;
+  background-color: var(--red); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+button a {
+  color: white;
+}
+#sticky-footer {
   background-color: var(--red);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  flex-shrink: none;
 }
 
 .container-fluid {
-  margin-bottom: 60px; /*Same as footer height */
+  margin-bottom: 80px; /*Same as footer height */
 }
