--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --purple: rgb(183, 148, 250);
   --yellow: rgb(245, 229, 91);
   --green: rgb(136, 194, 19);
-  --white: rgb(231, 231, 222);
+  --white: #f5f5f5;
   --black: #100e0e;
 }
 
