--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,13 @@ nav {
 }
 
 #opening {
-  font-size: 6rem;
+  font-size: 10vw;
 }
 
 #elevatorPitch {
   justify-self: center;
   align-self: center;
-  font-size: 1.7em;
+  font-size: 2vmax;
 }
 button {
   padding: 5px;
