--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,9 @@ img {
   background: var(--black);
   background: linear-gradient(
     90deg,
-    var(--black) 0%,
-    var(--red) 50%,
-    var(--black) 100%
+    var(--red) 100%,
+    var(--red) 100%,
+    var(--red) 100%
   );
 }
 
