--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,47 @@
   --lightred: #a32a48;
 }
 
-*:not(.fa){
-  font-family: Arial;
+
+
+h1 {
+    font-family: Lato, serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 38.02pt;
+    color: var(--white);
+
+    
+}
+
+h2 {
+    color: var(--altred);
+    font-family: Lato, sans serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23.5pt;
+}
+
+h3 {
+       font-family: lato, sans serif;
+       font-style: normal;
+       font-weight: 400;
+       font-size: 14.52pt;
+}
+
+h4 {
+    font-family: lato, sans serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 13.61pt;
 }
 
 body {
-  background-color: var(--offwhite);
+background-color: #F1F1F1;
   color: var(--black);
+}
+
+html {
+    background-color: #004789;
 }
 
 .highlight {
@@ -40,6 +74,9 @@ body {
  
 }
 
+
+
+
 .thicc {
     color: var(--black);
     font-size: 2vw;
@@ -53,12 +90,45 @@ body {
 
 nav {
   /* background-color: var(--purple); */
-  background-color: var(--offwhite);
+
+  background-color: var(--lightblue);
+  
+  
 }
 
-#navbarNav a:hover {
+#navbar {
+    font-family: lato;
+    color: var(--black);
+    font-size: 14.52pt;
+
+}
+
+#navbar a:hover {
   border-bottom: 3px solid var(--altred);
 }
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+  opacity: .9;
+}
+
+.content {
+    padding: 16px;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
+
+
 
 #opening {
   font-size: 9vw;
@@ -112,6 +182,21 @@ img {
     color: white;
 }
 
+.colored-header {
+    padding-top: 15px;
+    padding-bottom: 0px;
+   background: var(--offwhite);
+   color: var(--black);
+}
+
+.colored {
+    padding-top: 0px;
+    padding-bottom: 15px;
+   background: var(--offwhite);
+   color: var(--black);
+    
+}
+
 .band {
     color: var(--red);
     font-weight: bold;
@@ -122,6 +207,15 @@ img {
 }
 
 /* Overlays */
+
+.overlay-colored {
+    background-color: var(--altred);
+    position:relative;
+    width: 100%;
+    height: 100%;
+    opacity: 0.20;
+    z-index: 2;
+}
 
 /* Main container */
 .overlay-image {
@@ -136,10 +230,9 @@ img {
 }
 /* Original text overlay */
 .overlay-image .text {
-  color: #fff;
+  
   font-size: 30px;
   line-height: 1.5em;
-  text-shadow: 2px 2px 2px #000;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -159,14 +252,127 @@ img {
 /* New overlay appearance on hover */
 .overlay-image:hover .hover {
   opacity: 1;
+
+  
 }
 .overlay-image .normal {
   transition: 0.5s ease;
 }
 .overlay-image:hover .normal {
-  opacity: 0;
+  opacity: 1;
 }
 .overlay-image .hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  
+}
+
+/* timeline*/
+.timeline ul {
+    background: #F1F1F1;
+  padding: 40px 0;
+}
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: var(--altred);
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  color: white;
+  background: #D74166;
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div { left: 45px; }
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
+}
+
+.timeline ul li:nth-child(even) div { left: -439px; }
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+  border-color: transparent transparent transparent #F45B69;
+}
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.timeline ul li::after { transition: background .5s ease-in-out; }
+
+.timeline ul li.in-view::after { background: #F45B69; }
+
+.timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
+}
+
+.timeline ul li:nth-child(odd) div { transform: translate3d(200px, 0, 0); }
+
+.timeline ul li:nth-child(even) div { transform: translate3d(-200px, 0, 0); }
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+@media screen and (max-width: 900px) {
+
+.timeline ul li div { width: 250px; }
+
+.timeline ul li:nth-child(even) div { left: -289px; /*250+45-6*/
+}
+}
+
+@media screen and (max-width: 600px) {
+
+.timeline ul li { margin-left: 20px; }
+
+.timeline ul li div { width: calc(100vw - 91px); }
+
+.timeline ul li:nth-child(even) div { left: 45px; }
+
+.timeline ul li:nth-child(even) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
+}
 }
 
